--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=Rezero
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_DOMAIN=rezero.ir
+APP_URL=http://${APP_DOMAIN}
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -21,6 +22,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_DOMAIN=.${APP_DOMAIN}
 
 MEMCACHED_HOST=127.0.0.1
 
