--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
         "@vitejs/plugin-vue": "^3.0.0",
         "autoprefixer": "^10.4.7",
         "axios": "^0.27",
+        "eslint": "^8.32.0",
+        "eslint-import-resolver-alias": "^1.1.2",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-vue": "^9.9.0",
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
