--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.7",
         "@vitejs/plugin-vue": "^4.4.1",
         "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.3.5",
-        "vite": "^4.0.0"
-    },
-    "dependencies": {
+        "vite": "^4.0.0",
         "vue": "^3.3.8",
         "vue-router": "^4.2.5"
+    },
+    "dependencies": {
     }
 }
